alignment fix

--- a/src/navbar/Nav.css
+++ b/src/navbar/Nav.css
@@ -1,9 +1,3 @@
-nav {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
 nav * {
   margin: 0;
 }
@@ -12,12 +6,23 @@ nav {
   background: white;
   width: 100%;
 }
+
+nav .nav-container {
+  margin: 0 auto;
+  max-width: 1160px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 nav ul {
   display: flex;
 }
+
 nav ul li {
   list-style: none;
 }
+
 nav ul li a {
   padding: 20px;
   display: block;
