--- a/src/products/Products.css
+++ b/src/products/Products.css
@@ -3,7 +3,7 @@
   display: grid;
   grid-template-columns:  1fr 1fr 1fr;
   grid-gap: 30px 5%;
-  max-width: 1200px;
+  max-width: 1100px;
   margin: 0 auto;
 }
 
@@ -14,8 +14,9 @@
 
 .product-image {
   width: 100%;
-  padding-top: 100%;
+  padding-top: 80%;
   background-size: 100%;
+  background-position: center;
 }
 
 .product-info {
